Fix style of table header

--- a/src/main/resources/com/yo1000/sonarqube/hanger/hanger_widget.html.erb
+++ b/src/main/resources/com/yo1000/sonarqube/hanger/hanger_widget.html.erb
@@ -14,6 +14,9 @@
       .hanger-data-times-hour {
         width: 2.35em;
       }
+      #hanger-widget-<%= widget.id.to_s -%> table.data thead tr th {
+        vertical-align: middle;
+      }
     </style>
     <div id="hanger-widget-<%= widget.id.to_s -%>" class="hanger-widget">
       <table class="data">
